# clineval

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
clineval/: __init__.py  cli.py
clineval/core/: dataset.py  evaluator.py  metric.py  render.py  report.py  schema.py
clineval/core/ontology/: __init__.py  hpo.py  ic.py  similarity.py
clineval/pipeline/: __init__.py  cache.py  models.py  normalize.py  retrieve.py  synonyms.py  throttle.py
clineval/pipeline/clients/: __init__.py  eutils.py  http.py  litvar.py  myvariant_client.py  variantvalidator.py
clineval/regulatory/: __init__.py  mapping.py
clineval/tasks/: __init__.py
clineval/tasks/hpo_extraction/: __init__.py  adapters.py  datasets.py  extractor.py  metrics.py
clineval/tasks/report_generation/: __init__.py
clineval/tasks/variant_retrieval/: __init__.py  datasets.py  metrics.py  report.py  retriever.py
clineval/templates/: report.md.j2  retrieval_report.md.j2
datasets/: README.md  __init__.py  build_hgmd_gold.py  download_gsc.py
docs/: GETTING_STARTED.md  USAGE.md  knowledge-base.md  variant_retrieval_guide.md
docs/superpowers/plans/: 2026-07-09-clineval-module-a-hpo-extraction.md  2026-07-16-variant-literature-retrieval.md
docs/superpowers/specs/: 2026-07-09-clineval-module-a-hpo-extraction-design.md  2026-07-16-api-contracts-findings.md  2026-07-16-variant-literature-retrieval-design.md
examples/: hpo_extraction_demo.ipynb
examples/data/: cached_predictions.jsonl  cached_retrieval.jsonl  ryr1_gold.jsonl  synthetic_mini.jsonl  tutorial_gold.jsonl  tutorial_predictions.jsonl
tests/: __init__.py  conftest.py  test_adapters.py  test_build_hgmd_gold.py  test_cli.py  test_cli_retrieval.py  test_client_eutils.py  test_client_litvar.py  test_client_myvariant.py  test_client_variantvalidator.py  test_dataset.py  test_datasets_gsc.py  test_demo_fixtures.py  test_download_gsc.py  test_evaluator.py  test_extractor.py  test_metric.py  test_metrics_tier1.py  test_metrics_tier2.py  test_metrics_tier3.py  test_ontology.py  test_pipeline_cache.py  test_pipeline_http.py  test_pipeline_models.py  test_pipeline_synonyms.py  test_pipeline_throttle.py  test_regulatory.py  test_report.py  test_retrieval_datasets.py  test_retrieval_e2e.py  test_retrieval_metric.py  test_retrieval_report.py  test_retrieval_smoke.py  test_retriever.py  test_schema.py  test_smoke.py  test_stage1_normalize.py  test_stage2_retrieve.py  test_version_alignment.py
tests/fixtures/api_samples/: esummary_ryr1.json  myvariant_ryr1.json  (+4 more)
(+3 files in other folders)
